port changes for status endpoint
