# src/main/openapi/ds-discover-openapi_v1.yaml
@@ -817,6 +817,23 @@ components:
           type: string
           description: 'Self diagnosed health'
           example: 'ok'
+        gitCommitChecksum:
+          type: string
+          description: 'The checksum of the deployed commit.'
+          example: 'ca82a6dff817ec66f44342007202690a93763949'
+        gitBranch:
+          type: string
+          description: 'The current deployed branch.'
+          example: master
+        gitCurrentTag:
+          type: string
+          description: 'The current tag of the deployed branch.'
+        gitClosestTag:
+          type: string
+          description: 'The closest tag of the deployed branch.'
+        gitCommitTime:
+          type: string
+          description: 'The time for the latest commit of the deplyed branch.'
 
     Error:
       type: object
